<resources>
    <string name="app_name">Hunt&amp;Gather</string>
    <string name="title_activity_maps">Hunt&amp;Gather</string>

    <!---
    Navigation Bar Title Strings
    -->
    <string name="nav_create_hunt">Create Hunt</string>
    <string name="nav_join_hunt">Join Hunt</string>
    <string name="nav_explore">Explore Hunts</string>
    <string name="nav_settings">Settings</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>

    <!---
    Create Hunt  Strings
    -->
    <string name="create_hunt_hunt_code">HUNT CODE:</string>
    <string name="create_hunt_add_marker">Add Marker</string>
    <string name="create_hunt_view_marker">View Markers</string>
    <string name="create_hunt_markers_placed">Current Amount Of Markers Placed : </string>
    <string name="create_hunt_finished">Finished</string>

    <!--
    Add Hunt Marker Box strings
    -->
    <string name="add_clue">Add Clue</string>
    <string name="tap_select">(Tap to Select)</string>
    <string name="own_clue">Own Clue</string>
    <string name="random_riddle">Random Riddle</string>
    <string name="random_math">Random Math</string>
    <string name="answer">Answer</string>
    <string name="question">Question</string>

    
   <string name="answer_question">Answer The Following Question:</string>
   <string name="submit_answer">Submit Answer</string>

    <string name="hunt_code">Hunt Code</string>
    <string name="congrats">Congratulations!</string>
    <string name="completedHuntText">You have completed this treasure hunt! Statistics below: </string>
    <string name="return_to_main_menu">Return To main Menu</string>
    <string name="quit_sure">Are you sure you want to quit?</string>
    <string name="timed_hunt_string">Timed hunt?</string>
    <string name="multiplayer_string">Multiplayer?</string>
    <string name="time_taken">Time Taken:</string>
    <string name="distance_travelled">Distance Travelled:</string>
    <string name="pleaseRateString">Please rate the hunt :</string>
</resources>
