<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cast_libraries_material_featurehighlight_text_header_color"
    android:clickable="true"

    android:orientation="vertical">

    <TextView
        android:id="@+id/unique_hunt_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hunt_code_text"
        android:layout_alignBottom="@+id/hunt_code_text"
        android:layout_alignLeft="@+id/view_marker_button"
        android:layout_alignStart="@+id/view_marker_button"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:text="test"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/hunt_code_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp"
        android:layout_toLeftOf="@+id/unique_hunt_create"
        android:layout_toStartOf="@+id/unique_hunt_create"
        android:text="@string/create_hunt_hunt_code"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/markers_placed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/finish_button"
        android:layout_alignLeft="@+id/add_marker_button"
        android:layout_alignStart="@+id/add_marker_button"
        android:layout_marginBottom="52dp"
        android:text="@string/create_hunt_markers_placed"
        android:textSize="16sp" />

    <Button
        android:id="@+id/add_marker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginTop="154dp"
        android:layout_toLeftOf="@+id/finish_button"
        android:layout_toStartOf="@+id/finish_button"
        android:text="@string/create_hunt_add_marker" />

    <Button
        android:id="@+id/view_marker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/add_marker_button"
        android:layout_alignBottom="@+id/add_marker_button"
        android:layout_toEndOf="@+id/finish_button"
        android:layout_toRightOf="@+id/finish_button"
        android:text="@string/create_hunt_view_marker" />

    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:text="@string/create_hunt_finished" />


</RelativeLayout>