<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:paddingTop="30dp"
        android:text="@string/congrats"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/returnMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/returnButton"
        android:layout_alignParentEnd="true"

        android:layout_alignParentRight="true"
        android:layout_marginBottom="131dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/completedHuntText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/timeTaken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="63dp"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/time_taken"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timeDifference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_above="@+id/distanceTravelled"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="placeHolder"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/distanceTravelled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@+id/timeTaken"
        android:layout_alignStart="@+id/timeTaken"
        android:layout_below="@+id/timeTaken"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/distance_travelled"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="59dp"
        android:text="@string/return_to_main_menu" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/returnButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp" />

    <TextView
        android:id="@+id/rateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ratingBar"
        android:layout_alignLeft="@+id/distanceTravelled"
        android:layout_alignStart="@+id/distanceTravelled"
        android:layout_toLeftOf="@+id/timeDifference"
        android:layout_toStartOf="@+id/timeDifference"
        android:gravity="center"
        android:text="@string/pleaseRateString"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>