<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textview_answer_q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="15sp"
        android:text="@string/answer_question"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/question_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textview_answer_q"
        android:paddingBottom="5sp"
        android:text="@string/question"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_question_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textview_answer_q"
        android:layout_marginTop="45dp"
        android:paddingBottom="5sp"
        android:text="@string/question"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/answer_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answer_editText"
        android:layout_alignEnd="@+id/question_textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/question_textView"
        android:text="@string/answer"
        android:textSize="19sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/answer_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_submit_answer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="140dp"
        android:ems="10"
        android:hint="@string/answer"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button_submit_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:text="@string/submit_answer" />

</RelativeLayout>